add requirejs; fix css

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,11 @@
     "target": "es3",
     "outDir": "dist",
     "rootDir": "src",
+    "module": "amd",
     "moduleResolution": "node",
-    "module": "es6",
-    "inlineSourceMap": true,
     "esModuleInterop": true,
+    
+    "inlineSourceMap": true,
 
     "preserveConstEnums": true,
     "removeComments": false,
